enabled share button

--- a/static/jade/section/share-and-win.jade
+++ b/static/jade/section/share-and-win.jade
@@ -5,11 +5,15 @@
     p.text-medium Bagikan informasi GREAT 12.12 SALE ke temanmu dan raih kesempatan memenangkan iphone 6
 
     .social-media.text-center
-      a.icon.facebook(href="", title="Facebook")
-      a.icon.twitter(href="", title="Twitter")
-      a.icon.linkedin(href="", title="Linkedin")
-      a.icon.gplus(href="", title="Google+")
-      a.icon.email(href="", title="Email")
+      a.icon.facebook(href="https://www.facebook.com/dialog/feed?app_id=100618713643082&display=popup&caption=Wuih%2C%20dari%20mulai%20toko%2012%20seleb%2C%20diskon%20up%20to%2090%25%20sampai%20hadiah%20ke%20Jepang%20di%20%40ShopeeID%20Harbolnas!%20%23Shopee1212&link=http%3A%2F%2Fshopee.co.id%2F1212&redirect_uri=http%3A%2F%2Fshopee.co.id%2F1212", onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=550');return false;", title="Facebook")
+
+      a.icon.twitter(href="https://twitter.com/intent/tweet?text=Wuih%2C%20dari%20mulai%20toko%2012%20seleb%2C%20diskon%20up%20to%2090%25%20sampai%20hadiah%20ke%20Jepang%20di%20%40ShopeeID%20Harbolnas!%20%23Shopee1212%20shopee.co.id%2F1212", onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", title="Twitter")
+
+      a.icon.linkedin(href="https://www.linkedin.com/cws/share?url=http%3A%2F%2Fshopee.co.id%2F1212", onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", title="Linkedin")
+
+      a.icon.gplus(href="https://plus.google.com/share?url=http%3A%2F%2Fshopee.co.id%2F1212", onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", title="Google+")
+
+      a.icon.email(href="mailto:", title="Email")
 
     .form-submit-email
       h5.text-center Enter your email, so we can let you know if you’re winner
@@ -20,7 +24,7 @@
       #mc_embed_signup
         form#mc-embedded-subscribe-form.validate(action='//shopee.us12.list-manage.com/subscribe/post?u=fbd937291f586820b7d740428&id=b1598d2ea0', method='post', name='mc-embedded-subscribe-form', target='_blank', novalidate='')
           #mc_embed_signup_scroll
-            // real people should not fill this in and expect good things - do not remove this or risk form bot signups
+            // real people should not fill this in and #Shopee1212&xpect good things - do not remove this or risk form bot signups
             div(style='position: absolute; left: -5000px;', aria-hidden='true')
               input(type='text', name='b_fbd937291f586820b7d740428_b1598d2ea0', tabindex='-1', value='')
             input#mce-EMAIL.email(type='email', value='', name='EMAIL', placeholder='Your email here', required='')
