--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -73,7 +73,7 @@
           ul
             li
               | Follow toko&nbsp;
-              a(href="https://twitter.com/ShopeeID", target="_blannk") @ShopeeID
+              a(href="http://shopee.co.id/shopeeid", target="_blannk") @ShopeeID
               |  di aplikasi Shopee.
             li Cek toko @ShopeeID setiap hari, temukan post "Daily Check-in" selama 7 – 11 Desember 2015.
             li Berikan komentar "Check-in" untuk setiap gambar yang di-post, setiap harinya.
@@ -84,7 +84,7 @@
           ul
             li Partisipan yang baru memulai pada hari kedua atau melewatkan satu hari atau lebih tanpa memberikan komentar "Check-in" akan dinyatakan gugur meskipun memulai dari awal.
             li Voucher dapat digunakan untuk berbelanja di Shopee tgl 12 Desember 2015
-            li Vouhcher dapat digunakan untuk produk apapun, kecuali egori: Voucher
+            li Voucher dapat digunakan untuk produk apapun, kecuali kategori: Voucher
             li Voucher dapat digunakan untuk pembelian min.Rp150,000 saja
         span.md-close
 
@@ -98,14 +98,14 @@
           ul
             li
               | Follow dan kunjungi toko&nbsp;
-              a(href="https://twitter.com/ShopeeID", target="_blannk") @ShopeeID
+              a(href="http://shopee.co.id/shopeeid", target="_blannk") @ShopeeID
               |  di aplikasi Shopee.
             li Temukan berbagai produk diskon s/d 90%, yang akan dibuka tgl 10 Desember 2015, tepat pk 22:00
             li Stok &amp; waktu terbatas
 
           p Ketentuan:
           ul
-            li 1 orang hayna berhak membeli 1 jenis produk
+            li 1 orang hanya berhak membeli 1 jenis produk
             li Pemesanan atas produk sejenis namun berbeda harga akan tetap dibatalkan
         span.md-close
 
@@ -119,7 +119,7 @@
           ul
             li
               | Follow dan kunjungi toko&nbsp;
-              a(href="https://twitter.com/ShopeeID", target="_blannk") @ShopeeID
+              a(href="http://shopee.co.id/shopeeid", target="_blannk") @ShopeeID
               |  di aplikasi Shopee.
             li Temukan post barang pre-loved dari Selebriti favorit.
             li Lakukan penawaran dengan menyebutkan nominal harga yang diinginkan di bagian komentar
@@ -149,7 +149,7 @@
 
     #modal-9.md-modal.md-effect-1
       .md-content
-        h3 Top Spender Competition
+        h3 #Showoff1212
         div
           p Caranya:
           ul
