--- a/static/jade/include/foot.jade
+++ b/static/jade/include/foot.jade
@@ -10,3 +10,18 @@ script.
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-61904553-6', 'auto');
     ga('send', 'pageview');
+
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '100618713643082',
+      xfbml      : true,
+      version    : 'v2.5'
+    });
+  };
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
