add popup for road to 12.12 and big day timeline

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -17,13 +17,13 @@
         img.md-trigger(src="/1212/img/timeline/timeline-4.png", data-modal="modal-4")
 
       .cd-timeline-content.road-to
-        img(src="/1212/img/timeline/timeline-5.png")
+        img.md-trigger(src="/1212/img/timeline/timeline-5.png", data-modal="modal-5")
 
       .cd-timeline-content.lelang-barang-artis
         img.md-trigger(src="/1212/img/timeline/timeline-6.png", data-modal="modal-6")
 
       .cd-timeline-content.the-big-day
-        img(src="/1212/img/timeline/timeline-7.png")
+        img.md-trigger(src="/1212/img/timeline/timeline-7.png", data-modal="modal-7")
 
       .cd-timeline-content.top-speder-competition
         img.md-trigger(src="/1212/img/timeline/timeline-8.png", data-modal="modal-8")
@@ -109,6 +109,15 @@
             li Pemesanan atas produk sejenis namun berbeda harga akan tetap dibatalkan
         span.md-close
 
+    #modal-5.md-modal.md-effect-1
+      .md-content
+        h3 Road 12.12
+        div
+          | 2 days left to The Big Day! Let the HYPE begin ;) <br /> <br />
+          | Sambil nunggu Hari Belanja Nasional, enaknya cek aplikasi Shopee & mulai bikin daftar belanjaan kamu nih! Ada berbagai macam produk fashion, hp & aksesoris, baby & kids, muslim fashion, & aksesoris komputer yang lagi DISKON besar-besaran juga loh! Yuk capcus ke aplikasi Shopee sekarang!
+
+        span.md-close
+
     #modal-6.md-modal.md-effect-1
       .md-content
         h3
@@ -129,6 +138,15 @@
           ul
             li Penawaran harus merupakan kelipatan Rp10,000
             li Penawaran baru harus lebih tinggi dari penawaran terakhir
+        span.md-close
+
+    #modal-7.md-modal.md-effect-1
+      .md-content
+        h3 The Big Day
+        div
+          | Selamat HARBOLNAS! Ayo belanja online, nikmati DISKON Terbesar khusus 24 jam saja! Waktunya borong produk-produk terlaris, harga paling minim!<br /> <br />
+          | It's Shopping Day! Segera serbu semua produk di GREAT 12.12 SALE dengan DISKON hingga 90% Kesempatan besarmu untuk mendapatkan produk-produk idaman dengan harga super super terjangkau!
+
         span.md-close
 
     #modal-8.md-modal.md-effect-1
