--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -42,7 +42,7 @@
             li Berikan jawaban sekreatif mungkin pada kolom komentar.
             li Shopee akan mengumumkan 1 pemenang dari setiap toko selebriti pada tgl 12 Desember 2015.
             li Tiap pemenang berhak mendapatkan hadiah kejutan yang akan diinformasikan melalui fitur chat di Shopee, langsung oleh penjual selebriti yang berpartisipasi.
-        span.md-close
+        span.md-close CLOSE
 
     #modal-2.md-modal.md-effect-1
       .md-content
@@ -63,7 +63,7 @@
             li Voucher dapat digunakan dengan maks.diskon Rp50,000.
             li Voucher tidak dapat digunakan untuk produk yang telah didiskon.
             li Pengumuman pemenang &amp; kode voucher akan diberikan melalui SMS dari Shopee.
-        span.md-close
+        span.md-close CLOSE
 
     #modal-3.md-modal.md-effect-1
       .md-content
@@ -86,7 +86,7 @@
             li Voucher dapat digunakan untuk berbelanja di Shopee tgl 12 Desember 2015
             li Voucher dapat digunakan untuk produk apapun, kecuali kategori: Voucher
             li Voucher dapat digunakan untuk pembelian min.Rp150,000 saja
-        span.md-close
+        span.md-close CLOSE
 
     #modal-4.md-modal.md-effect-1
       .md-content
@@ -107,16 +107,17 @@
           ul
             li 1 orang hanya berhak membeli 1 jenis produk
             li Pemesanan atas produk sejenis namun berbeda harga akan tetap dibatalkan
-        span.md-close
+        span.md-close CLOSE
 
     #modal-5.md-modal.md-effect-1
       .md-content
         h3 Road 12.12
+        p &nbsp;
         div
           | 2 days left to The Big Day! Let the HYPE begin ;) <br /> <br />
           | Sambil nunggu Hari Belanja Nasional, enaknya cek aplikasi Shopee & mulai bikin daftar belanjaan kamu nih! Ada berbagai macam produk fashion, hp & aksesoris, baby & kids, muslim fashion, & aksesoris komputer yang lagi DISKON besar-besaran juga loh! Yuk capcus ke aplikasi Shopee sekarang!
 
-        span.md-close
+        span.md-close CLOSE
 
     #modal-6.md-modal.md-effect-1
       .md-content
@@ -138,16 +139,17 @@
           ul
             li Penawaran harus merupakan kelipatan Rp10,000
             li Penawaran baru harus lebih tinggi dari penawaran terakhir
-        span.md-close
+        span.md-close CLOSE
 
     #modal-7.md-modal.md-effect-1
       .md-content
         h3 The Big Day
+        p &nbsp;
         div
           | Selamat HARBOLNAS! Ayo belanja online, nikmati DISKON Terbesar khusus 24 jam saja! Waktunya borong produk-produk terlaris, harga paling minim!<br /> <br />
           | It's Shopping Day! Segera serbu semua produk di GREAT 12.12 SALE dengan DISKON hingga 90% Kesempatan besarmu untuk mendapatkan produk-produk idaman dengan harga super super terjangkau!
 
-        span.md-close
+        span.md-close CLOSE
 
     #modal-8.md-modal.md-effect-1
       .md-content
@@ -163,7 +165,7 @@
 
           p Informasi hadiah:
           div Enjoy your holiday in Tokyo by visiting Disneyland or Disneysea, Mt Fuji & Gotemba, we will also bring you to see the beautiful of Tokyo with Tokyo Full Day Tour. <br /> Tour Duration : 5 hari 4 malam<br />Total Pax : 2 orang<br />Category : Leisure<br />Flight : Termasuk<br />Departure : 01 Nov 2015 - 31 Mar 2016
-        span.md-close
+        span.md-close CLOSE
 
     #modal-9.md-modal.md-effect-1
       .md-content
@@ -176,6 +178,6 @@
             li Mention @ShopeeID (Twitter) atau @Shopee_ID (Instagram) sambil sertakan hashtag #ShowOff1212 dan #Shopee1212
             li Shopee akan mengumumkan 1 pemenang dari Instagram dan 1 pemenang dari Twitter pada 16 Desember 2015
             li Tiap pemenang akan mendapatkan hadiah Xiaomi Yi Camera
-        span.md-close
+        span.md-close CLOSE
 
 .md-overlay
