--- a/static/less/web/modal.less
+++ b/static/less/web/modal.less
@@ -97,7 +97,7 @@ perspective effects (not including the modals and the overlay).
   h3 {
     text-transform: uppercase;
     margin: 0;
-    padding: 0.4em;
+    padding: 0.6em;
     text-align: center;
     font-size: 2.4em;
     font-family: "Roboto";
@@ -113,7 +113,7 @@ perspective effects (not including the modals and the overlay).
     }
 
     @media (max-width: @screen-xs) {
-      font-size: 1.4em;
+      font-size: 1.6em;
 
       small {
         font-size: 13px;
@@ -226,6 +226,8 @@ perspective effects (not including the modals and the overlay).
   border: 1px solid #ccc;
   height: 40px;
   width: 40px;
+  overflow: hidden;
+  text-indent: -9999px;
   background: #fff url(../img/close-ico.png) no-repeat center center;
   position: absolute;
   top: -15px;
@@ -237,6 +239,7 @@ perspective effects (not including the modals and the overlay).
     bottom: 20px;
     right: 0;
     width: 100px;
+    text-indent: 0;
     border-radius: 2px;
     padding-left: 25px;
     color: #444;
