--- a/static/less/web/timeline.less
+++ b/static/less/web/timeline.less
@@ -1,3 +1,5 @@
+.inkwell{-webkit-filter:sepia(.3) contrast(1.1) brightness(1.1) grayscale(1);filter:sepia(.3) contrast(1.1) brightness(1.1) grayscale(1)}
+
 .section{
   &.timeline {
     position: relative;
