disable popup for disable timeline

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -11,25 +11,25 @@
         img.md-trigger(src="/1212/img/timeline/timeline-2.png", data-modal="modal-2")
 
       .cd-timeline-content.daily-checkin
-        img.md-trigger(src="/1212/img/timeline/timeline-3-disabled.png", data-modal="modal-3")
+        img(src="/1212/img/timeline/timeline-3-disabled.png", data-modal="modal-3")
 
       .cd-timeline-content.pyramid-discount
-        img.md-trigger(src="/1212/img/timeline/timeline-4-disabled.png", data-modal="modal-4")
+        img(src="/1212/img/timeline/timeline-4-disabled.png", data-modal="modal-4")
 
       .cd-timeline-content.road-to
-        img.md-trigger(src="/1212/img/timeline/timeline-5-disabled.png", data-modal="modal-5")
+        img(src="/1212/img/timeline/timeline-5-disabled.png", data-modal="modal-5")
 
       .cd-timeline-content.lelang-barang-artis
-        img.md-trigger(src="/1212/img/timeline/timeline-6-disabled.png", data-modal="modal-6")
+        img(src="/1212/img/timeline/timeline-6-disabled.png", data-modal="modal-6")
 
       .cd-timeline-content.the-big-day
-        img.md-trigger(src="/1212/img/timeline/timeline-7-disabled.png", data-modal="modal-7")
+        img(src="/1212/img/timeline/timeline-7-disabled.png", data-modal="modal-7")
 
       .cd-timeline-content.top-speder-competition
-        img.md-trigger(src="/1212/img/timeline/timeline-8-disabled.png", data-modal="modal-8")
+        img(src="/1212/img/timeline/timeline-8-disabled.png", data-modal="modal-8")
 
       .cd-timeline-content.showoff1212
-        img.md-trigger(src="/1212/img/timeline/timeline-9-disabled.png", data-modal="modal-9")
+        img(src="/1212/img/timeline/timeline-9-disabled.png", data-modal="modal-9")
 
     #modal-1.md-modal.md-effect-1
       .md-content
