link artis, fixig modals with join button

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -42,6 +42,9 @@
             li Berikan jawaban sekreatif mungkin pada kolom komentar.
             li Shopee akan mengumumkan 1 pemenang dari setiap toko selebriti pada tgl 12 Desember 2015.
             li Tiap pemenang berhak mendapatkan hadiah kejutan yang akan diinformasikan melalui fitur chat di Shopee, langsung oleh penjual selebriti yang berpartisipasi.
+
+        a.join-button(href="http://mall.shopee.co.id/seller/collections/20", target="_blank") JOIN
+
         span.md-close CLOSE
 
     #modal-2.md-modal.md-effect-1
@@ -51,18 +54,21 @@
           p Caranya:
           ul
             li Cek daftar penjual yang berpartisipasi.
-            li Follow penjual &amp; berikan komentar pada produk apapun yang disukai.
+            li Follow penjual &amp; berikan komentar "WISHLIST 1212" pada produk apapun yang disukai.
             li 12 Pemenang beruntung dari setiap toko, akan dipilh dan diumumkan tgl 12 Desember 2015. Para pemenang akan mendapatkan voucher belanja 10% untuk toko bersangkutan.
 
           p Ketentuan:
           ul
-            li Masa follow &amp; comment adalah 1 -11 Desember 2015.
+            li Masa follow &amp; comment adalah 1 -11 Desember 2015 (Ditutup 11 Desember pk 22:00).
             li Masa berlaku Voucher, khusus untuk tanggal 12 Desember 2015.
             li Voucher berlaku untuk toko bersangkutan.
             li Voucher dapat digunakan tanpa min. pembelian.
             li Voucher dapat digunakan dengan maks.diskon Rp50,000.
             li Voucher tidak dapat digunakan untuk produk yang telah didiskon.
             li Pengumuman pemenang &amp; kode voucher akan diberikan melalui SMS dari Shopee.
+
+        a.join-button(href="http://mall.shopee.co.id/seller/collections", target="_blank") JOIN
+
         span.md-close CLOSE
 
     #modal-3.md-modal.md-effect-1
@@ -73,7 +79,7 @@
           ul
             li
               | Follow toko&nbsp;
-              a(href="http://shopee.co.id/shopeeid", target="_blannk") @ShopeeID
+              a(href="http://shopee.co.id/shopeeid", target="_blank") @ShopeeID
               |  di aplikasi Shopee.
             li Cek toko @ShopeeID setiap hari, temukan post "Daily Check-in" selama 7 – 11 Desember 2015.
             li Berikan komentar "Check-in" untuk setiap gambar yang di-post, setiap harinya.
@@ -86,6 +92,9 @@
             li Voucher dapat digunakan untuk berbelanja di Shopee tgl 12 Desember 2015
             li Voucher dapat digunakan untuk produk apapun, kecuali kategori: Voucher
             li Voucher dapat digunakan untuk pembelian min.Rp150,000 saja
+
+        a.join-button(href="#") JOIN
+
         span.md-close CLOSE
 
     #modal-4.md-modal.md-effect-1
@@ -98,7 +107,7 @@
           ul
             li
               | Follow dan kunjungi toko&nbsp;
-              a(href="http://shopee.co.id/shopeeid", target="_blannk") @ShopeeID
+              a(href="http://shopee.co.id/shopeeid", target="_blank") @ShopeeID
               |  di aplikasi Shopee.
             li Temukan berbagai produk diskon s/d 90%, yang akan dibuka tgl 10 Desember 2015, tepat pk 22:00
             li Stok &amp; waktu terbatas
@@ -107,6 +116,9 @@
           ul
             li 1 orang hanya berhak membeli 1 jenis produk
             li Pemesanan atas produk sejenis namun berbeda harga akan tetap dibatalkan
+
+        a.join-button(href="#") JOIN
+
         span.md-close CLOSE
 
     #modal-5.md-modal.md-effect-1
@@ -116,6 +128,8 @@
         div
           | 2 days left to The Big Day! Let the HYPE begin ;) <br /> <br />
           | Sambil nunggu Hari Belanja Nasional, enaknya cek aplikasi Shopee & mulai bikin daftar belanjaan kamu nih! Ada berbagai macam produk fashion, hp & aksesoris, baby & kids, muslim fashion, & aksesoris komputer yang lagi DISKON besar-besaran juga loh! Yuk capcus ke aplikasi Shopee sekarang!
+
+        a.join-button(href="#") JOIN
 
         span.md-close CLOSE
 
@@ -129,7 +143,7 @@
           ul
             li
               | Follow dan kunjungi toko&nbsp;
-              a(href="http://shopee.co.id/shopeeid", target="_blannk") @ShopeeID
+              a(href="http://shopee.co.id/shopeeid", target="_blank") @ShopeeID
               |  di aplikasi Shopee.
             li Temukan post barang pre-loved dari Selebriti favorit.
             li Lakukan penawaran dengan menyebutkan nominal harga yang diinginkan di bagian komentar
@@ -139,6 +153,9 @@
           ul
             li Penawaran harus merupakan kelipatan Rp10,000
             li Penawaran baru harus lebih tinggi dari penawaran terakhir
+
+        a.join-button(href="#") JOIN
+
         span.md-close CLOSE
 
     #modal-7.md-modal.md-effect-1
@@ -149,6 +166,8 @@
           | Selamat HARBOLNAS! Ayo belanja online, nikmati DISKON Terbesar khusus 24 jam saja! Waktunya borong produk-produk terlaris, harga paling minim!<br /> <br />
           | It's Shopping Day! Segera serbu semua produk di GREAT 12.12 SALE dengan DISKON hingga 90% Kesempatan besarmu untuk mendapatkan produk-produk idaman dengan harga super super terjangkau!
 
+        a.join-button(href="#") JOIN
+
         span.md-close CLOSE
 
     #modal-8.md-modal.md-effect-1
@@ -157,14 +176,16 @@
         div
           p Caranya:
           ul
-            li Belanja sebanyak-banyaknya di Shopee pada tanggal 12 Desember 2015
-            li Pembeli dengan transaksi tertinggi akan mendapatkan paket berlibur ke Jepang
+            li Belanja total min.Rp 1,000,000 di Shopee pada tanggal 12 Desember 2015, dapatkan kesempatan paket berlibur ke Jepang
             li Batas pelunasan hingga 15 Desember 2015
             li Pengguna yang melakukan pembayaran langsung di tanggal 12 Desember 2015 akan lebih diprioritaskan
-            li Shopee akan mengumumkan 1 pemenang pada 16 Desember 2015
+            li Shopee akan mengumumkan 1 pemenang beruntung pada 16 Desember 2015 melalui social Media &amp; email
 
           p Informasi hadiah:
-          div Enjoy your holiday in Tokyo by visiting Disneyland or Disneysea, Mt Fuji & Gotemba, we will also bring you to see the beautiful of Tokyo with Tokyo Full Day Tour. <br /> Tour Duration : 5 hari 4 malam<br />Total Pax : 2 orang<br />Category : Leisure<br />Flight : Termasuk<br />Departure : 01 Nov 2015 - 31 Mar 2016
+          div Enjoy your holiday in Tokyo by visiting Disneyland or Disneysea, Mt Fuji & Gotemba, we will also bring you to see the beautiful of Tokyo with Tokyo Full Day Tour.<br /> Tour Duration : 5 hari 4 malam<br />Total Pax : 2 orang<br />Category : Leisure<br />Flight : Termasuk<br />Departure : 01 Nov 2015 - 31 Mar 2016
+
+        a.join-button(href="#") JOIN
+
         span.md-close CLOSE
 
     #modal-9.md-modal.md-effect-1
@@ -178,6 +199,9 @@
             li Mention @ShopeeID (Twitter) atau @Shopee_ID (Instagram) sambil sertakan hashtag #ShowOff1212 dan #Shopee1212
             li Shopee akan mengumumkan 1 pemenang dari Instagram dan 1 pemenang dari Twitter pada 16 Desember 2015
             li Tiap pemenang akan mendapatkan hadiah Xiaomi Yi Camera
+
+        a.join-button(href="#") JOIN
+
         span.md-close CLOSE
 
 .md-overlay
