fixing jade compile

--- a/static/jade/section/artist-profile.jade
+++ b/static/jade/section/artist-profile.jade
@@ -2,74 +2,74 @@
   h3.subtitle.text-center MILIKI BARANG PRE-LOVED SELEBRITI FAVORITMU
 
   .artis-item
-    a(href="http://shopee.co.id/Giring_ganesha" target="_blank")
+    a(href="http://shopee.co.id/Giring_ganesha", target="_blank")
       img(src="/1212/img/artis/giring.png")
     h5 Giring Nidji
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/Raisa6690" target="_blank")
+    a(href="http://shopee.co.id/Raisa6690", target="_blank")
       img(src="/1212/img/artis/raisa.png")
     h5 Raisa
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/tulusm" target="_blank")
+    a(href="http://shopee.co.id/tulusm", target="_blank")
       img(src="/1212/img/artis/tulus.png")
     h5 Tulus
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/" target="_blank")
+    a(href="http://shopee.co.id/", target="_blank")
       img(src="/1212/img/artis/eva-celia.png")
     h5 Eva Celia
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/lalakarmela" target="_blank")
+    a(href="http://shopee.co.id/lalakarmela", target="_blank")
       img(src="/1212/img/artis/lala-karmela.png")
     h5 Lala Karmela
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/marcello_tahitoe" target="_blank")
+    a(href="http://shopee.co.id/marcello_tahitoe", target="_blank")
       img(src="/1212/img/artis/ello.png")
     h5 Ello
     span Toko Dibuka 12.12
 
 
   .artis-item
-    a(href="http://shopee.co.id/ayushitaaa" target="_blank")
+    a(href="http://shopee.co.id/ayushitaaa", target="_blank")
       img(src="/1212/img/artis/ayushita.png")
     h5 ayushita
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/maliqmusic" target="_blank")
+    a(href="http://shopee.co.id/maliqmusic", target="_blank")
       img(src="/1212/img/artis/maliq.png")
     h5 MALIQ & D’ESSENTIALS
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/endahnrhesa" target="_blank")
+    a(href="http://shopee.co.id/endahnrhesa", target="_blank")
       img(src="/1212/img/artis/endha-rhesa.png")
     h5 Endah N Resha
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/saykoji" target="_blank")
+    a(href="http://shopee.co.id/saykoji", target="_blank")
       img(src="/1212/img/artis/saykoji.png")
     h5 Saykoji
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/TeddyAdhitya" target="_blank")
+    a(href="http://shopee.co.id/TeddyAdhitya", target="_blank")
       img(src="/1212/img/artis/teddy-adithya.png")
     h5 Teddy Adithya
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/midnightQuickie" target="_blank")
+    a(href="http://shopee.co.id/midnightQuickie", target="_blank")
       img(src="/1212/img/artis/hive.png")
     h5 Midnight Quickie
     span Toko Dibuka 12.12
