enabled daily check-in

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -11,7 +11,7 @@
         img.md-trigger(src="/1212/img/timeline/timeline-2.png", data-modal="modal-2")
 
       .cd-timeline-content.daily-checkin
-        img(src="/1212/img/timeline/timeline-3-disabled.png", data-modal="modal-3")
+        img.md-trigger(src="/1212/img/timeline/timeline-3.png", data-modal="modal-3")
 
       .cd-timeline-content.pyramid-discount
         img(src="/1212/img/timeline/timeline-4-disabled.png", data-modal="modal-4")
