--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -31,6 +31,9 @@
       .cd-timeline-content.showoff1212
         img(src="/1212/img/timeline/timeline-9-disabled.png", data-modal="modal-9")
 
+      .cd-timeline-content.ubershopee
+        img(src="/1212/img/timeline/timeline-10-disabled.png", data-modal="modal-10")
+
     #modal-1.md-modal.md-effect-1
       .md-content
         h3 Celebrity 12.12 Comment
@@ -93,7 +96,7 @@
             li Voucher dapat digunakan untuk produk apapun, kecuali kategori: Voucher
             li Voucher dapat digunakan untuk pembelian min.Rp150,000 saja
 
-        a.join-button(href="#") JOIN
+        a.join-button(href="http://mall.shopee.co.id/shop/?sid=1289539&source=search#shopid=1289539") JOIN
 
         span.md-close CLOSE
 
@@ -111,13 +114,14 @@
               |  di aplikasi Shopee.
             li Temukan berbagai produk diskon s/d 90%, yang akan dibuka tgl 10 Desember 2015, tepat pk 22:00
             li Stok &amp; waktu terbatas
+            li Dapatkan hint nya melalui akun sosial media Shopee
 
           p Ketentuan:
           ul
             li 1 orang hanya berhak membeli 1 jenis produk
             li Pemesanan atas produk sejenis namun berbeda harga akan tetap dibatalkan
 
-        a.join-button(href="#") JOIN
+        a.join-button(href="http://mall.shopee.co.id/shop/?sid=1289539&source=search#shopid=1289539") JOIN
 
         span.md-close CLOSE
 
@@ -183,6 +187,10 @@
 
           p Informasi hadiah:
           div Enjoy your holiday in Tokyo by visiting Disneyland or Disneysea, Mt Fuji & Gotemba, we will also bring you to see the beautiful of Tokyo with Tokyo Full Day Tour.<br /> Tour Duration : 5 hari 4 malam<br />Total Pax : 2 orang<br />Category : Leisure<br />Flight : Termasuk<br />Departure : 01 Nov 2015 - 31 Mar 2016
+
+          p Ketentuan:
+          ul
+            li Peserta yang melakukan kecurangan akan didiskualifikasi.
 
         a.join-button(href="#") JOIN
 
