update content uber

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -212,4 +212,20 @@
 
         span.md-close CLOSE
 
+    #modal-10.md-modal.md-effect-1
+      .md-content
+        h3 UberShopee
+        div
+          p Experience The Ultimate Mobile Shopping with #UberShopee
+          ul
+            li Buat kamu yang berada di area SCBD dan Thamrin tanggal 12 Desember 2015 khusus pkl 11.00 – 16.00 WIB dapatkan kesempatan untuk bertemu dengan artis kenamaan Indonesia di dalam Uber
+            li Install aplikasi Uber, Masukkan kode UBERXSHOPEE di bagian "PROMOTIONS" aplikasi Uber
+            li Pilih ikon UBERSHOPEE untuk memesan Uber Car
+            li Akan ada Shopee assistant yang membantu kamu belanja melalui aplikasi Shopee di dalam Uber Car
+            li Dapatkan juga shopping voucher & merchandise ekskluif dari Shopee
+
+        a.join-button(href="#") JOIN
+
+        span.md-close CLOSE
+
 .md-overlay
