updafte timeline and changes banner

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -14,10 +14,10 @@
         img.md-trigger(src="/1212/img/timeline/timeline-3.png", data-modal="modal-3")
 
       .cd-timeline-content.pyramid-discount
-        img(src="/1212/img/timeline/timeline-4-disabled.png", data-modal="modal-4")
+        img.md-trigger(src="/1212/img/timeline/timeline-4.png", data-modal="modal-4")
 
       .cd-timeline-content.road-to
-        img(src="/1212/img/timeline/timeline-5-disabled.png", data-modal="modal-5")
+        img.md-trigger(src="/1212/img/timeline/timeline-5.png", data-modal="modal-5")
 
       .cd-timeline-content.lelang-barang-artis
         img(src="/1212/img/timeline/timeline-6-disabled.png", data-modal="modal-6")
