--- a/static/less/web/timeline.less
+++ b/static/less/web/timeline.less
@@ -194,7 +194,8 @@
     &.selebriti-comment,
     &.daily-checkin,
     &.showoff1212,
-    &.the-big-day {
+    &.the-big-day,
+    &.ubershopee {
       position: static !important;
       left: auto !important;
       top: auto !important;
