update content popup for pyramid discount

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -104,7 +104,6 @@
       .md-content
         h3
           | Pyramid Discount
-          small (start 10pm)
         div
           p Caranya:
           ul
@@ -112,7 +111,8 @@
               | Follow dan kunjungi toko&nbsp;
               a(href="http://shopee.co.id/shopeeid", target="_blank") @ShopeeID
               |  di aplikasi Shopee.
-            li Temukan berbagai produk diskon s/d 90%, yang akan dibuka tgl 10 Desember 2015, tepat pk 22:00
+            li Temukan berbagai produk dengan diskon s/d 90%, yang akan dibuka tanggal 9 dan 11 Desember 2015!
+            li Ikut terus social media Shopee Indonesia untuk mendapatkan hint dan petunjuk untuk Pyramid Discount.
             li Stok &amp; waktu terbatas
             li Dapatkan hint nya melalui akun sosial media Shopee
 
