enabled all popup timeline

--- a/static/jade/section/artist-profile.jade
+++ b/static/jade/section/artist-profile.jade
@@ -20,7 +20,7 @@
     span Toko Dibuka 12.12
 
   .artis-item
-    a(href="http://shopee.co.id/", target="_blank")
+    a(href="http://shopee.co.id/evaceliaa", target="_blank")
       img(src="/1212/img/artis/eva-celia.png")
     h5 Eva Celia
     span Toko Dibuka 12.12
