--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -20,19 +20,19 @@
         img.md-trigger(src="/1212/img/timeline/timeline-5.png", data-modal="modal-5")
 
       .cd-timeline-content.lelang-barang-artis
-        img(src="/1212/img/timeline/timeline-6-disabled.png", data-modal="modal-6")
+        img.md-trigger(src="/1212/img/timeline/timeline-6.png", data-modal="modal-6")
 
       .cd-timeline-content.the-big-day
-        img(src="/1212/img/timeline/timeline-7-disabled.png", data-modal="modal-7")
+        img.md-trigger(src="/1212/img/timeline/timeline-7.png", data-modal="modal-7")
 
       .cd-timeline-content.top-speder-competition
-        img(src="/1212/img/timeline/timeline-8-disabled.png", data-modal="modal-8")
+        img.md-trigger(src="/1212/img/timeline/timeline-8.png", data-modal="modal-8")
 
       .cd-timeline-content.showoff1212
-        img(src="/1212/img/timeline/timeline-9-disabled.png", data-modal="modal-9")
+        img.md-trigger(src="/1212/img/timeline/timeline-9.png", data-modal="modal-9")
 
       .cd-timeline-content.ubershopee
-        img(src="/1212/img/timeline/timeline-10-disabled.png", data-modal="modal-10")
+        img.md-trigger(src="/1212/img/timeline/timeline-10.png", data-modal="modal-10")
 
     #modal-1.md-modal.md-effect-1
       .md-content
@@ -133,7 +133,7 @@
           | 2 days left to The Big Day! Let the HYPE begin ;) <br /> <br />
           | Sambil nunggu Hari Belanja Nasional, enaknya cek aplikasi Shopee & mulai bikin daftar belanjaan kamu nih! Ada berbagai macam produk fashion, hp & aksesoris, baby & kids, muslim fashion, & aksesoris komputer yang lagi DISKON besar-besaran juga loh! Yuk capcus ke aplikasi Shopee sekarang!
 
-        a.join-button(href="#") JOIN
+        a.join-button(href="http://mall.shopee.co.id/") JOIN
 
         span.md-close CLOSE
 
