update joins button for others timeline

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -158,7 +158,7 @@
             li Penawaran harus merupakan kelipatan Rp10,000
             li Penawaran baru harus lebih tinggi dari penawaran terakhir
 
-        a.join-button(href="#") JOIN
+        a.join-button(href="http://mall.shopee.co.id/seller/collections/20/") JOIN
 
         span.md-close CLOSE
 
@@ -170,7 +170,7 @@
           | Selamat HARBOLNAS! Ayo belanja online, nikmati DISKON Terbesar khusus 24 jam saja! Waktunya borong produk-produk terlaris, harga paling minim!<br /> <br />
           | It's Shopping Day! Segera serbu semua produk di GREAT 12.12 SALE dengan DISKON hingga 90% Kesempatan besarmu untuk mendapatkan produk-produk idaman dengan harga super super terjangkau!
 
-        a.join-button(href="#") JOIN
+        a.join-button(href="http://mall.shopee.co.id/collections/1052/") JOIN
 
         span.md-close CLOSE
 
@@ -192,7 +192,7 @@
           ul
             li Peserta yang melakukan kecurangan akan didiskualifikasi.
 
-        a.join-button(href="#") JOIN
+        a.join-button(href="http://mall.shopee.co.id/shop/?sid=1289539&source=search#shopid=1289539") JOIN
 
         span.md-close CLOSE
 
@@ -208,8 +208,6 @@
             li Shopee akan mengumumkan 1 pemenang dari Instagram dan 1 pemenang dari Twitter pada 16 Desember 2015
             li Tiap pemenang akan mendapatkan hadiah Xiaomi Yi Camera
 
-        a.join-button(href="#") JOIN
-
         span.md-close CLOSE
 
     #modal-10.md-modal.md-effect-1
@@ -224,7 +222,7 @@
             li Akan ada Shopee assistant yang membantu kamu belanja melalui aplikasi Shopee di dalam Uber Car
             li Dapatkan juga shopping voucher & merchandise ekskluif dari Shopee
 
-        a.join-button(href="#") JOIN
+        a.join-button(href="http://newsroom.uber.com/jakarta/id/2015/12/ubershopeeen/") JOIN
 
         span.md-close CLOSE
 
